--- a/.eslintrc
+++ b/.eslintrc
@@ -20,7 +20,8 @@
   "rules": {
     "prettier/prettier": ["error", { "singleQuote": true }],
     "react/jsx-uses-vars": "error",
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off"
   },
   "ignorePatterns": ["*.config.js"]
 }
