--- a/.eslintrc
+++ b/.eslintrc
@@ -21,7 +21,8 @@
     "prettier/prettier": ["error", { "singleQuote": true }],
     "react/jsx-uses-vars": "error",
     "react/prop-types": "off",
-    "@typescript-eslint/explicit-module-boundary-types": "off"
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/no-empty-interface": "off"
   },
   "ignorePatterns": ["*.config.js"]
 }
