--- a/tsconfig.extend.json
+++ b/tsconfig.extend.json
@@ -7,7 +7,13 @@
       "@root": ["./"],
       "@root/*": ["./*"],
       "@components": ["./components"],
-      "@components/*": ["./components/*"]
+      "@components/*": ["./components/*"],
+      "@global": ["./global"],
+      "@global/*": ["./global/*"],
+      "@pages": ["./pages"],
+      "@pages/*": ["./pages/*"],
+      "@router": ["./router"],
+      "@router/*": ["./router/*"]
     }
   }
 }
