--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,5 +30,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           PERSONAL_TOKEN: ${{secrets.GH_PAT}}
-          PUBLISH_DIR: ./dist
+          PUBLISH_DIR: ./public
           SCRIPT_MODE: true
