enhancement: Change homepage link

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://julrum.github.io/react-blog",
+  "homepage": "https://julrum.github.io/",
   "name": "react-blog",
   "version": "0.1.0",
   "private": true,
