--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,5 +32,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           PERSONAL_TOKEN: ${{secrets.GH_PAT}}
-          PUBLISH_DIR: ./public
+          PUBLISH_DIR: ./build
           SCRIPT_MODE: true
