enhancement: Add new Contents Page

--- a/tsconfig.extend.json
+++ b/tsconfig.extend.json
@@ -4,12 +4,10 @@
     "paths": {
       "@App": ["./App.tsx"],
 
-      "@root": ["./"],
-      "@root/*": ["./*"],
+      "@common": ["./common"],
+      "@common/*": ["./common/*"],
       "@components": ["./components"],
       "@components/*": ["./components/*"],
-      "@global": ["./global"],
-      "@global/*": ["./global/*"],
       "@pages": ["./pages"],
       "@pages/*": ["./pages/*"],
       "@router": ["./router"],
