--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-markdown": "^7.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "remark-gfm": "^2.0.0",
     "styled-components": "^5.3.0",
     "styled-normalize": "^8.0.7",
     "typescript": "^4.3.5",
