--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "^5.1.8",
+    "@types/react-syntax-highlighter": "^13.5.2",
     "@types/styled-components": "^5.1.12",
     "gh-pages": "^3.2.3",
     "qs": "^6.10.1",
@@ -24,6 +25,7 @@
     "react-markdown": "^7.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-syntax-highlighter": "^15.4.4",
     "remark-gfm": "^2.0.0",
     "styled-components": "^5.3.0",
     "styled-normalize": "^8.0.7",
