--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,9 +19,9 @@ jobs:
       - name: Install Packages
         run: yarn install
       - name: Build page
-        run: yarn run build
+        run: yarn build
       - name: Deploy to gh-pages
-        uses: yarn deploy
+        uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./build
