developer: Set prettier and eslint

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,16 +15,7 @@
     "jsx": "preserve",
     "incremental": true,
     "baseUrl": ".",
-    "rootDir": ".",
-    "paths": {
-      "@components/*": ["components/*"],
-      "@contents/*": ["contents/*"],
-      "@lib/*": ["lib/*"],
-      "@pages/*": ["pages/*"],
-      "@styles/*": ["styles/*"],
-      "@types/*": ["types/*"],
-      "@utils/*": ["utils/*"]
-    }
+    "rootDir": "."
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
