--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "gh-pages": "^3.2.3",
     "gray-matter": "^4.0.3",
     "next": "12.1.0",
+    "next-compose-plugins": "^2.2.1",
     "next-fonts": "^1.5.1",
     "next-mdx-remote": "^3.0.8",
+    "next-optimized-images": "^2.6.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-syntax-highlighter": "^15.4.5",
