--- a/package.json
+++ b/package.json
@@ -31,10 +31,9 @@
     "react-syntax-highlighter": "^15.4.5",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-slug": "^5.0.1",
-    "remark-code-titles": "^0.1.2",
     "remark-emoji": "^3.0.2",
     "remark-gfm": "^3.0.1",
-    "remark-sub-super": "^1.0.20",
+    "remark-supersub": "^1.0.0",
     "styled-components": "^5.3.3",
     "styled-normalize": "^8.0.7"
   },
