--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react-dom": "18.1.0",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-autolink-headings": "^6.1.1",
+    "rehype-code-titles": "^1.0.3",
+    "rehype-highlight": "^5.0.2",
     "rehype-slug": "^5.0.1",
     "remark-emoji": "^3.0.2",
     "remark-gfm": "^3.0.1",
