--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "remark-gfm": "^3.0.1",
     "remark-supersub": "^1.0.0",
     "styled-components": "^5.3.5",
-    "styled-normalize": "^8.0.7"
+    "styled-normalize": "^8.0.7",
+    "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
     "@types/node": "17.0.33",
