--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "cross-env ANALYZE=false next build",
     "start": "next start",
     "lint": "next lint",
     "export": "next export",
@@ -18,14 +18,12 @@
     "@next/mdx": "^12.2.3",
     "@types/react-syntax-highlighter": "^15.5.3",
     "@types/styled-components": "^5.1.25",
+    "cross-env": "^7.0.3",
     "date-fns": "^2.29.1",
     "gh-pages": "^4.0.0",
     "gray-matter": "^4.0.3",
     "next": "12.2.3",
-    "next-compose-plugins": "^2.2.1",
-    "next-fonts": "^1.5.1",
     "next-mdx-remote": "^4.1.0",
-    "next-optimized-images": "^2.6.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-syntax-highlighter": "^15.5.0",
