--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@types/styled-components": "^5.1.26",
     "cross-env": "^7.0.3",
     "date-fns": "^2.29.3",
+    "firebase": "^9.19.1",
+    "firebase-admin": "^11.6.0",
     "gray-matter": "^4.0.3",
     "next": "13.2.3",
     "next-mdx-remote": "^4.4.1",
